<resources>
    <string name="app_name">Станислав Баусов</string>
    <string name="e_mail">E-mail</string>
    <string name="projects">Проектов</string>
    <string name="code_lines">Написано строк кода</string>
    <string name="rank">Рейтинг</string>
    <string name="vk_profile">Профиль в VK</string>
    <string name="repository">Репозиторий</string>
    <string name="about">О себе</string>
    <string name="phone">Мобильный</string>
</resources>
